k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mongo:5
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: db-storage
      volumes:
      - name: db-storage
        emptyDir: {}
