k8s/custom-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-ingress-lb
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  loadBalancerIP: 80.211.122.147
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
